compiler/driver/tests/snapshots/codegen_snapshots__snap_for_range.snap
---
source: compiler/driver/tests/codegen_snapshots.rs
expression: normalize_ir(& ir)
---
source_filename = "test.ny"
target triple = "arm64-apple-darwin"

@.str.N = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1

declare i32 @printf(ptr, ...)
declare void @abort()
declare void @llvm.memcpy.p0.p0.i64(ptr, ptr, i64, i1)

define i32 @main() {
entry:
  %alloca.N = alloca i32
  store i32 0, i32* %alloca.N
  br label %for.cond.N
for.cond.N:
  %loop.phi.N = phi i32 [0, %entry], [%loop.in.N, %for.body.N]
  %load.N = load i32, i32* %alloca.N
  %cmp.N = icmp slt i32 %load.N, 5
  br i1 %cmp.N, label %for.body.N, label %for.end.N
for.body.N:
  %ld.N = load i32, i32* %alloca.N
  %bin.N = add i32 %loop.phi.N, %ld.N
  %load.N = load i32, i32* %alloca.N
  %inc.N = add i32 %load.N, 1
  store i32 %inc.N, i32* %alloca.N
  %loop.in.N = add i32 0, %bin.N
  br label %for.cond.N
for.end.N:
  %loop.exit.N = phi i32 [%loop.phi.N, %for.cond.N]
  %fmt.N = getelementptr inbounds i8, ptr @.str.N, i64 0
  call i32 (ptr, ...) @printf(ptr %fmt.N, i32 %loop.exit.N)
  ret i32 0
}
